[package]
name = "external2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["uio", "process"] }
proc-maps = "0.3.2"
regex = "1.10.2"
sysinfo = "0.30.5"
tracing-subscriber = "0.3.18"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["tlhelp32", "wow64apiset"] }
