[package]
name = "external2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
log = "0.4.20"
regex = "1.10.2"
sysinfo = "0.30.5"
tracing-subscriber = "0.3.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["uio", "process"] }
proc-maps = "0.3.2"

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "System", "Foundation_Collections"] }
